objects/RES_Projects__c.object
<CustomObject>
    <description>Vertiba 2/17/2014 - Created to track the development information associated to an opportunity</description>
    <fields>
        <fullName>Auto_Create_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COD_Date__c</fullName>
        <label>COD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConstructionNTPMonth__c</fullName>
        <label>ConstructionNTP Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionNTPYear__c</fullName>
        <label>ConstructionNTP Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_NTP_Date__c</fullName>
        <formula>IF(ISNULL(ConstructionNTPYear__c),null,DATE(ConstructionNTPYear__c, ConstructionNTPMonth__c, 1))</formula>
        <label>Construction NTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_AC_Ratio__c</fullName>
        <label>DC/AC Ratio</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Lead</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>This RES Employee has not been entered as a Contact on the Renewable Energy Account. Please follow this link and add them as a Contact: https://res-group.my.salesforce.com/001i000000svaF8AAI.</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>RES T&amp;D</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Developments (Dev Lead)</relationshipLabel>
        <relationshipName>Project_Developments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DevelopmentManagerFirstName__c</fullName>
        <label>DevelopmentManagerFirstName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DevelopmentManagerLastName__c</fullName>
        <label>DevelopmentManagerLastName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Manager_Full_Name__c</fullName>
        <formula>DevelopmentManagerFirstName__c &amp; &quot; &quot;&amp; DevelopmentManagerLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Manager Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Developments</relationshipLabel>
        <relationshipName>Project_Developments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engineering_Class__c</fullName>
        <label>Engineering Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimating_Level__c</fullName>
        <label>Estimating Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_or_tracker__c</fullName>
        <label>Fixed or Tracker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCF__c</fullName>
        <label>NCF</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NERC_Region__c</fullName>
        <inlineHelpText>AKA = NERC Region
The value within this field mirrors the &quot;NERC Region&quot; field within the Dev Site.</inlineHelpText>
        <label>RTO Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Chile-SIC</fullName>
                </value>
                <value>
                    <fullName>Chile-SING</fullName>
                </value>
                <value>
                    <fullName>Chile-Aysen</fullName>
                </value>
                <value>
                    <fullName>Chile-Magallanes</fullName>
                </value>
                <value>
                    <fullName>ERCOT</fullName>
                </value>
                <value>
                    <fullName>MISO</fullName>
                </value>
                <value>
                    <fullName>NEISO</fullName>
                </value>
                <value>
                    <fullName>NYISO</fullName>
                </value>
                <value>
                    <fullName>PJM</fullName>
                </value>
                <value>
                    <fullName>SPP</fullName>
                </value>
                <value>
                    <fullName>WECC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nearest_City__c</fullName>
        <label>Nearest City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Development (Operators)</relationshipLabel>
        <relationshipName>Operator_Project_Developments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPA_Price__c</fullName>
        <label>PPA Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPA_Sum__c</fullName>
        <label># of PPAs</label>
        <summaryForeignKey>PPA_Bid__c.Project_Development__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phase_Description__c</fullName>
        <label>Phase Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Site Selection</fullName>
                </value>
                <value>
                    <fullName>Mast Erected</fullName>
                </value>
                <value>
                    <fullName>Mid-Stage Permitting</fullName>
                </value>
                <value>
                    <fullName>Advanced Permitting</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>In Construction</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>General Development</fullName>
                </value>
                <value>
                    <fullName>Construction Bids</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_Number_SubPhase__c</fullName>
        <label>Phase Number SubPhase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Number__c</fullName>
        <label>Phase Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Harbor__c</fullName>
        <label>Port / Harbor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Port</fullName>
                </value>
                <value>
                    <fullName>Harbor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <label>Port</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Developments (Primary Partner)</relationshipLabel>
        <relationshipName>Project_Developments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <inlineHelpText>External ID</inlineHelpText>
        <label>Project Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Opps_Sum__c</fullName>
        <label># of Project Opps</label>
        <summaryForeignKey>Project_Opp__c.Project_Development__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RES_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RES_Business_Unit__c</fullName>
        <description>Vertiba 04/22/2014 Phase 1</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Mediterranean</fullName>
                </value>
                <value>
                    <fullName>Medium Wind</fullName>
                </value>
                <value>
                    <fullName>Nordisk Vindkraft</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
                <value>
                    <fullName>UK Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RES_Country__c</fullName>
        <description>Vertiba 4/10/2014 - Phase 1</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Republic of Ireland</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RES_Description__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RES_Development_Database_Link__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Development Database Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RES_ECM_Link__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>ECM Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RES_Estimated_Value__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RES_Latitude__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RES_Longitude__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RES_Mapping_Link__c</fullName>
        <description>Vertiba 04/10/2014 - Created for Phase1</description>
        <label>Mapping Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RES_Postal_Code__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RES_Project_Size_MW__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <inlineHelpText>Please enter MW</inlineHelpText>
        <label>Project Size (MW)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RES_Project_Status__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RES_Technology_Type__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Technology Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onshore Wind</fullName>
                </value>
                <value>
                    <fullName>Offshore Wind</fullName>
                </value>
                <value>
                    <fullName>Solar - PV</fullName>
                </value>
                <value>
                    <fullName>Solar - Other</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
                <value>
                    <fullName>Transmission</fullName>
                </value>
                <value>
                    <fullName>Energy Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RES_Transmission_Distance_Mileage__c</fullName>
        <description>Vertiba3/10/2014 - Phase1</description>
        <label>Transmission Distance (Mileage)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Jamaica</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>The Caribbean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Agreement_Expire_Date__c</fullName>
        <label>Service Agreement Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>IF(Phase_Number__c =0, &quot;0. Site Selection&quot;,
IF(Phase_Number__c =1, &quot;1. Concept/Prospecting&quot;,
IF(Phase_Number__c =2, &quot;2. Early Stage&quot;,
IF(Phase_Number__c =3, &quot;3. Mid Stage&quot;,
IF(Phase_Number__c =4, &quot;4. Late Stage&quot;,
IF(Phase_Number__c =5, &quot;5. In Construction&quot;,
IF(Phase_Number__c =6, &quot;6. Operational&quot;,
IF(Phase_Number__c =7, &quot;7. General Development&quot;,
IF(Phase_Number__c =8, &quot;8. Construction Bids&quot;,&quot;&quot;
))))
))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a 3rd Party Construction project?</inlineHelpText>
        <label>Third Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WTG_Capacity_MW__c</fullName>
        <formula>IF(ISPICKVAL(WTG_Type__c, &quot;M5000-116&quot;),5,
IF(ISPICKVAL(WTG_Type__c, &quot;Bonus B35&quot;),0.45,
IF(ISPICKVAL(WTG_Type__c, &quot;Bonus B76&quot;),2,
IF(ISPICKVAL(WTG_Type__c, &quot;6.2M 126&quot;),6.2,
IF(ISPICKVAL(WTG_Type__c, &quot;5M&quot;),5,
IF(ISPICKVAL(WTG_Type__c, &quot;V39-500kW&quot;),0.5,
IF(ISPICKVAL(WTG_OEM__c, &quot;Vestas&quot;), VALUE(Right(TEXT(WTG_Type__c),3)),
IF(ISPICKVAL(WTG_OEM__c, &quot;Siemens&quot;),VALUE(LEFT(SUBSTITUTE(TEXT(WTG_Type__c),&quot;SWT-&quot;,&quot;&quot;),3)),
VALUE(Right(TEXT(WTG_Type__c),4))/1000
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WTG Capacity (MW)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WTG_OEM__c</fullName>
        <inlineHelpText>The Equipment Manufacturer for Turbines</inlineHelpText>
        <label>WTG OEM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adwen</fullName>
                </value>
                <value>
                    <fullName>Areva</fullName>
                </value>
                <value>
                    <fullName>Bard</fullName>
                </value>
                <value>
                    <fullName>MHI Vestas</fullName>
                </value>
                <value>
                    <fullName>Nordex</fullName>
                </value>
                <value>
                    <fullName>Senivon</fullName>
                </value>
                <value>
                    <fullName>Siemens</fullName>
                </value>
                <value>
                    <fullName>Vestas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WTG_Quantity__c</fullName>
        <inlineHelpText>The Total Number of Turbines at this roject Development</inlineHelpText>
        <label>WTG Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WTG_Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please search for the Account/Company who will be this Project&apos;s Service Provider.</inlineHelpText>
        <label>WTG Service Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Developments (WTG Service Provider)</relationshipLabel>
        <relationshipName>Project_Developments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WTG_Sub_Structure_Type__c</fullName>
        <label>WTG Sub-Structure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Floating</fullName>
                </value>
                <value>
                    <fullName>Gravity</fullName>
                </value>
                <value>
                    <fullName>Jacket</fullName>
                </value>
                <value>
                    <fullName>Lattice</fullName>
                </value>
                <value>
                    <fullName>Monopile</fullName>
                </value>
                <value>
                    <fullName>Tripile</fullName>
                </value>
                <value>
                    <fullName>Tripod</fullName>
                </value>
                <value>
                    <fullName>Various</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WTG_Type__c</fullName>
        <inlineHelpText>The specific model of the wind turbine</inlineHelpText>
        <label>WTG Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WTG_OEM__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>5M</fullName>
                </value>
                <value>
                    <fullName>6.2M 126</fullName>
                </value>
                <value>
                    <fullName>Bard 5.0</fullName>
                </value>
                <value>
                    <fullName>Bonus B35</fullName>
                </value>
                <value>
                    <fullName>Bonus B76</fullName>
                </value>
                <value>
                    <fullName>M5000-116</fullName>
                </value>
                <value>
                    <fullName>N90/2300</fullName>
                </value>
                <value>
                    <fullName>N90/2500</fullName>
                </value>
                <value>
                    <fullName>SWT-2.3-82</fullName>
                </value>
                <value>
                    <fullName>SWT-2.3-93</fullName>
                </value>
                <value>
                    <fullName>SWT-3.6-107</fullName>
                </value>
                <value>
                    <fullName>SWT-3.6-120</fullName>
                </value>
                <value>
                    <fullName>SWT-4.0-120</fullName>
                </value>
                <value>
                    <fullName>SWT-4.0-130</fullName>
                </value>
                <value>
                    <fullName>SWT-6.0-120</fullName>
                </value>
                <value>
                    <fullName>SWT-6.0-154</fullName>
                </value>
                <value>
                    <fullName>SWT-7.0-154</fullName>
                </value>
                <value>
                    <fullName>V112-3.0</fullName>
                </value>
                <value>
                    <fullName>V126-3.3</fullName>
                </value>
                <value>
                    <fullName>V164-8.0</fullName>
                </value>
                <value>
                    <fullName>V39-500kW</fullName>
                </value>
                <value>
                    <fullName>V66-2.0</fullName>
                </value>
                <value>
                    <fullName>V80-2.0</fullName>
                </value>
                <value>
                    <fullName>V90-3.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weekly_Update__c</fullName>
        <inlineHelpText>This field corresponds to the &apos;Weekly Update&apos; field in the Development Database, as well as the &apos;Latest Update&apos; Field on the associated Opportunity.</inlineHelpText>
        <label>Weekly Update</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Project Development</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Developments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Auto_Create_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Auto_Create_Opportunity__c),
OR(
ISNULL( ConstructionNTPYear__c),
ISNULL(COD_Date__c)
))</errorConditionFormula>
        <errorMessage>In order for you to create a new Opportunity, either COD Date, or Construction NTP, must be entered.</errorMessage>
    </validationRules>
</CustomObject>